New page header

--- a/school-crowd.html
+++ b/school-crowd.html
@@ -44,7 +44,7 @@ https://github.com/tomtor/school-crowd
 	<div id="heading" class="jumbotron">
 		<table width="100%">
 			<tr>
-				<td style="text-align: center;"><h1 style="padding: 2px;">School Crowd</h1></td><td class="logo"><a href="https://www.kadaster.nl"><img src="logo.png"/></a></td>
+				<td style="text-align: center;"><h2 style="padding: 2px;">School Crowd</h2><p>Zet de belangrijke objecten op de kaart</p></td><td class="logo"><a href="https://www.kadaster.nl"><img src="logo.png"/></a></td>
 			</tr>
 		</table>
 	</div>
@@ -139,7 +139,7 @@ https://github.com/tomtor/school-crowd
 
 	// method that we will use to update the control based on feature properties passed
 	info.update = function (props) {
-	  this._div.innerHTML = '<h4>Je Eigen Kaart</h4><br/><b><small>Klik om toe te voegen</small></b>';
+	  this._div.innerHTML = '<b><small>Klik om toe te voegen</small></b>';
 	};
 	info.addTo(map);
 
