--- a/school-crowd.html
+++ b/school-crowd.html
@@ -139,7 +139,7 @@ https://github.com/tomtor/school-crowd
 
 	// method that we will use to update the control based on feature properties passed
 	info.update = function (props) {
-	  this._div.innerHTML = '<b><small>Klik om toe te voegen</small></b>';
+	  this._div.innerHTML = '<b><small>Klik op de kaart<br/>om toe te voegen</small></b>';
 	};
 	info.addTo(map);
 
