--- a/school-crowd.html
+++ b/school-crowd.html
@@ -265,15 +265,20 @@ https://github.com/tomtor/school-crowd
 		var plotlist= result;
 		for (i= 0; i < plotlist.length; i++) {
 			try {
-				pu = "<table style=\"border-collapse: separate; border-spacing: 5px;\"><tr class=\"smallrow\"><td>UUID:</td><td>" + xss(plotlist[i].properties.uuid) + "</td></tr>" +
+				pu = "<table style=\"border-collapse: separate; border-spacing: 5px;\">" +
+					/*
+					"<tr class=\"smallrow\"><td>UUID:</td><td>" + xss(plotlist[i].properties.uuid) + "</td></tr>" +
 					"<tr class=\"smallrow\"><td>Tijdstip:</td><td>" + UTC2Local(xss(plotlist[i].properties.timestamp)) + "</td></tr>" +
-					"<tr class=\"smallrow\"><td>IP info:</td><td>" + xss(plotlist[i].properties.ip_info) +
-					"</td></tr><tr/>" +
+					"<tr class=\"smallrow\"><td>IP info:</td><td>" + xss(plotlist[i].properties.ip_info) + "</td></tr>" +
+					"<tr/>" +
+					*/
 					"<tr><td>Gebruiker:</td><td>" + xss(plotlist[i].properties.user) + "</td></tr>" +
+					/*
 					"<tr><td>Omschrijving:</td><td><b>" + xss(plotlist[i].properties.name) + "</b></td></tr>" +
 					(plotlist[i].properties.objlink ?
 						("<tr><td>Link:</td><td><b><a href=\"" + decode(plotlist[i].properties.objlink) + "\" target=\"_blank\">toon</a></b></td></tr>")
 						: "") +
+					*/
 					"<tr><td>Soort:</td><td><b>" + xss(plotlist[i].properties.kind) + "</td></tr></table>";
 				if (plotlist[i].properties.crypt) {
 					pu= pu + "<button id=\"delCryptButton\" class=\"btn btn-danger btn-sm btn-block\" onclick=\"delSecret('"
@@ -330,9 +335,13 @@ https://github.com/tomtor/school-crowd
 
 	function onMapClick(e) {
 		var pu = "<table style=\"border-collapse: separate; border-spacing: 5px;\">" +
+			/*
 			"<tr><td>Omschrijving:</td><td><input id=\"nameInput\" size=\"14\" type=\"text\"/></td></tr>" +
 			"<tr><td>Link (bv foto):</td><td><input id=\"linkInput\" size=\"14\" type=\"text\"/></td></tr>" +
-			"<tr><td>Kies:</td><td><select id=\"selInput\" class=\"form-control\">" +
+			*/
+				"<tr><td>Maak een keuze:</td></tr>" +
+			"<tr>" +
+				"<td><select id=\"selInput\" class=\"form-control\">" +
 				"<option value=\"Spoorwegovergang\">Spoorwegovergang</option>"+
 				"<option value=\"Busstation\">Busstation</option>"+
 				"<option value=\"Brandweerkazerne\">Brandweerkazerne</option>"+ 
@@ -353,10 +362,12 @@ https://github.com/tomtor/school-crowd
 				$("#noPW").modal();
 				return;
 			}
+			/*
 			if ($("#nameInput").val().length == 0) {
 				$("#noName").modal();
 				return;
 			}
+			*/
 			var gjf = {
 				"type": "Feature",
 				"geometry": {
@@ -364,8 +375,10 @@ https://github.com/tomtor/school-crowd
 					"coordinates": [ e.latlng.lng, e.latlng.lat ]
 				},
 				"properties" : {
+/*
 					"name" : clean($("#nameInput").val()),
 					"objlink": $("#linkInput").val().length ? $("#linkInput").val() : null,
+*/
 					"kind" : $("#selInput").val(),
 					"user" : $("#idInput").val()
 				}
@@ -374,10 +387,13 @@ https://github.com/tomtor/school-crowd
 			map.closePopup();
 			var msg= server + '/add/' + encodeURIComponent(JSON.stringify(gjf));
 			$.ajax({url: msg, success: function(result){
-				var pu = "<table style=\"border-collapse: separate; border-spacing: 5px;\"><tr class=\"smallrow\"><td>Geheime Sleutel:</td><td>"
+				var pu = "<table style=\"border-collapse: separate; border-spacing: 5px;\">" +
+/*
+				"<tr class=\"smallrow\"><td>Geheime Sleutel:</td><td>" +
 				+ result + "</td></tr><tr><td>Omschrijving:</td><td><b>" + xss(gjf.properties.name) + "</td></tr>" +
 				(gjf.properties.objlink ?
 					("<tr><td>Link:</td><td><b><a href=\"" + decode(gjf.properties.objlink) + "\" target=\"_blank\">toon</a></b></td></tr>") : "") +
+*/
 				"<tr><td>Soort:</td><td><b>" +  xss(gjf.properties.kind) + "</b></td></tr></table>" +
 				"<button id=\"delButton\" onclick=\"delObject('"+result+"')\" type=\"button\" class=\"btn btn-warning btn-sm btn-block\">Verwijder</button>";
 				markers[result]= lastMark;
@@ -385,10 +401,13 @@ https://github.com/tomtor/school-crowd
 					lastMark= lastMark.bindLabel(xss(gjf.properties.name));
 				lastMark.addTo(map).bindPopup(pu);
 				lastMark= null;
+/*
 				var row= $("#keyTable")[0].insertRow(1);
 				row.setAttribute("id",result);
-				row.innerHTML= "<td><button id=\"delButton2\" class=\"btn btn-warning btn-sm\" onclick=\"delObject('"+result+"')\" type=\"button\">Verwijder</button></td>"
-					+ "<td><b>" + xss(gjf.properties.name) + "</b></td><td>" + result + "</td>";
+				row.innerHTML= "<td><button id=\"delButton2\" class=\"btn btn-warning btn-sm\" onclick=\"delObject('"+result+"')\" type=\"button\">Verwijder</button></td>";
+					// + "<td><b>" + xss(gjf.properties.name) + "</b></td><td>" + result + "</td>";
+					"<td><b>" + xss(gjf.properties.kind) + "</b></td>";
+*/
 		
 				if ($("#pwInput").val().length > 0) {
 					gjf.properties.crypt= a2hex(CryptoJS.AES.encrypt(result, $("#pwInput").val())+"");
@@ -410,6 +429,7 @@ https://github.com/tomtor/school-crowd
 		<label for="inputPassword" class="sr-only">Wachtwoord</label>
 		<input type="password" id="pwInput" class="form-control" placeholder="Wachtwoord" required>
 	</div>
+<!--
 	<div class="col-sm-8">
 		<div id="delTable" class="smallerrow">
 			<table id="keyTable" class="table table-condensed" >
@@ -419,6 +439,7 @@ https://github.com/tomtor/school-crowd
 			</table>
 		</div>
 	</div>
+-->
 </div>
 </div>
 </body>
