--- a/school-crowd.html
+++ b/school-crowd.html
@@ -341,7 +341,7 @@ https://github.com/tomtor/school-crowd
 			*/
 				"<tr><td>Maak een keuze:</td></tr>" +
 			"<tr>" +
-				"<td><select id=\"selInput\" class=\"form-control\">" +
+				"<td><select id=\"selInput\" style=\"width: 15em\" class=\"form-control\">" +
 				"<option value=\"Spoorwegovergang\">Spoorwegovergang</option>"+
 				"<option value=\"Busstation\">Busstation</option>"+
 				"<option value=\"Brandweerkazerne\">Brandweerkazerne</option>"+ 
