--- a/school-crowd.html
+++ b/school-crowd.html
@@ -403,8 +403,8 @@ https://github.com/tomtor/school-crowd
 		lastMark = L.marker(e.latlng);
 		lastMark.addTo(map).bindPopup(pu).openPopup();
 		$("#addButton").click(function(event) {
-			//if ($("#pwInput").val() == "" || $("#idInput").val == "") {
-			if ($("#idInput").val == "") {
+			//if ($("#pwInput").val() == "" || $("#idInput").val() == "") {
+			if ($("#idInput").val() == "") {
 				$("#noPW").modal();
 				return;
 			}
