--- a/school-crowd.html
+++ b/school-crowd.html
@@ -349,7 +349,7 @@ https://github.com/tomtor/school-crowd
 		lastMark = L.marker(e.latlng);
 		lastMark.addTo(map).bindPopup(pu).openPopup();
 		$("#addButton").click(function(event) {
-			if ($("#pwInput").val() == "" || $("#idInput").val == "") {
+			if ($("#pwInput").val() == "" || $("#idInput").val() == "") {
 				$("#noPW").modal();
 				return;
 			}
