--- a/school-crowd.html
+++ b/school-crowd.html
@@ -51,6 +51,41 @@ https://github.com/tomtor/school-crowd
 <div id="map" style="margin-top: -12px; margin-right: -2px;"></div>
 <div id="dpi" style="height: 1in; left: -100%; position: absolute; top: -100%; width: 1in;"></div>
 
+<div id="noUser" class="modal fade" role="dialog">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal">&times;</button>
+				<h4 class="modal-title">Let Op</h4>
+			</div>
+			<div class="modal-body">
+				<div class="alert alert-warning"><strong>Vul een gebruiker in!<strong></div>
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-default" data-dismiss="modal">OK</button>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div id="noPW" class="modal fade" role="dialog">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal">&times;</button>
+				<h4 class="modal-title">Let Op</h4>
+			</div>
+			<div class="modal-body">
+				<div class="alert alert-warning"><strong>Vul een wachtwoord in!<strong></div>
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-default" data-dismiss="modal">OK</button>
+			</div>
+		</div>
+	</div>
+</div>
+
+
 <div id="wrongPW" class="modal fade" role="dialog">
 	<div class="modal-dialog">
 		<div class="modal-content">
@@ -77,7 +112,7 @@ https://github.com/tomtor/school-crowd
 			</div>
 			<form>
 				<div class="modal-body">
-					<input id="idGeo" class="form-control" placeholder="grote markt groningen" required autofocus>
+					<input id="idGeo" class="form-control" placeholder="grote markt groningen" autofocus>
 				</div>
 				<div class="modal-footer">
 					<button type="submit" class="btn btn-default btn-block" onClick="toonGeo()" data-dismiss="modal">Toon</button>
@@ -173,11 +208,10 @@ https://github.com/tomtor/school-crowd
 		$.ajax({url: "https://geodata.nationaalgeoregister.nl/geocoder/Geocoder?zoekterm=" +
 			encodeURIComponent($("#idGeo").val()), success: function(result) {
 				var pos= $(result).find("pos").first().text().split(" ");
-				//console.log(pos);
 				var latlng= RDM.projection.unproject(L.point(parseFloat(pos[0]), parseFloat(pos[1])));
-				//console.log(latlng);
 				//map.panTo(latlng);
-				map.setView(latlng, 9);
+				map.setView(latlng, 8);
+				$("#idGeo").val("");
 			}});
 	}
 
@@ -392,7 +426,7 @@ https://github.com/tomtor/school-crowd
 		lastMark.addTo(map).bindPopup(pu).openPopup();
 		$("#addButton").click(function(event) {
 			if ($("#idInput").val() == "") {
-				$("#noPW").modal();
+				$("#noUser").modal();
 				return;
 			}
 			var gjf = {
@@ -437,9 +471,9 @@ https://github.com/tomtor/school-crowd
 <div class="row">
 	<div class="col-sm-4">
 		<label for="inputEmail" class="sr-only">Gebruiker</label>
-		<input type="email" id="idInput" class="form-control" placeholder="Je Naam" required autofocus>
+		<input type="email" id="idInput" class="form-control" placeholder="Je e-Mail of Naam" required autofocus>
 		<label for="inputPassword" class="sr-only">Wachtwoord</label>
-		<input type="password" id="pwInput" class="form-control" placeholder="Wachtwoord" required>
+		<input type="password" id="pwInput" class="form-control" placeholder="Wachtwoord">
 	</div>
 </div>
 </div>
