--- a/school-crowd.html
+++ b/school-crowd.html
@@ -171,6 +171,22 @@ https://github.com/tomtor/school-crowd
 	};
 	L.control.layers(baseMaps, null, {position: 'topleft'}).addTo(map);
 
+	var searchControl = L.Control.extend({
+		options: {
+			position: 'topleft' 
+		},
+		onAdd: function (map) {
+			var container = L.DomUtil.create('div', 'leaflet-bar leaflet-control leaflet-control-custom');
+			container.style.backgroundColor = 'white';
+			container.onclick = searchGeo;
+			container.innerHTML = "<div style='height: 30px; width: 30px; display: table'><div style='display: table-cell; vertical-align: middle; text-align: center;'><i class=\"fa fa-globe fa-2x\"></i></div></div>";
+			L.DomEvent.disableClickPropagation(container);
+			return container;
+		},
+	});
+
+	map.addControl(new searchControl());
+
 	var info = L.control();
 	info.onAdd = function (map) {
 	  this._div = L.DomUtil.create('div', 'info'); // create a div with a class "info"
@@ -181,8 +197,7 @@ https://github.com/tomtor/school-crowd
 	// method that we will use to update the control based on feature properties passed
 	info.update = function (props) {
 	  this._div.innerHTML =
-			  "<button id=\"zoekButton\" class=\"btn btn-default btn-block\" onclick=\"searchGeo()\" type=\"button\">Zoek plaats...</button>"
-			+ '<br/><b><small>Klik voegt toe:</small></b><br/><br/>'
+				'<b><small>Klik voegt toe:</small></b><br/><br/>'
 			+ "<small>"
 			+ "<img src='images/basisschool-icon.png' width='24'>&nbsp;Basisschool<br/>"
 			+ "<img src='images/brandweerkazerne-icon.png' width='24'>&nbsp;Brandweerkazerne<br/>"
