--- a/school-crowd.html
+++ b/school-crowd.html
@@ -221,7 +221,7 @@ https://github.com/tomtor/school-crowd
 	function toonGeo() {
 		$.ajax({url: "https://geodata.nationaalgeoregister.nl/geocoder/Geocoder?zoekterm=" +
 			encodeURIComponent($("#idGeo").val()), success: function(result) {
-				var pos= $(result).find("pos").first().text().split(" ");
+				var pos= $(result).find("gml\\:pos, pos").first().text().split(" ");
 				var latlng= RDM.projection.unproject(L.point(parseFloat(pos[0]), parseFloat(pos[1])));
 				map.setView(latlng, $("#idGeo").val().indexOf(' ') >= 0 ? 12 : 8);
 				$("#idGeo").val("");
