--- a/school-crowd.html
+++ b/school-crowd.html
@@ -126,7 +126,7 @@ https://github.com/tomtor/school-crowd
 <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
 -->
 <script src="leaflet.js"></script>
-<script src="proj4-compressed.js"></script>
+<script src="proj4.js"></script>
 <script src="L.Control.Locate.min.js" charset="utf-8"></script>
 <script src="leaflet.label.js"></script>
 <script src="proj4leaflet.js"></script>
@@ -140,36 +140,43 @@ https://github.com/tomtor/school-crowd
 
 	var res = [3440.640, 1720.320, 860.160, 430.080, 215.040, 107.520, 53.760, 26.880, 13.440, 6.720, 3.360, 1.680, 0.840, 0.420];
 
-	var RDM = new L.Proj.CRS.TMS(
+	var RDM = new L.Proj.CRS(
 		'EPSG:28992',
-		'+proj=sterea +lat_0=52.15616055555555 +lon_0=5.38763888888889 +k=0.9999079 +x_0=155000 +y_0=463000 +ellps=bessel +units=m +towgs84=565.2369,50.0087,465.658,-0.406857330322398,0.350732676542563,-1.8703473836068,4.0812 +no_defs', [-285401.92, 22598.08, 595401.9199999999, 903401.9199999999], 
+		'+proj=sterea +lat_0=52.15616055555555 +lon_0=5.38763888888889 +k=0.9999079 +x_0=155000 +y_0=463000 +ellps=bessel +units=m +towgs84=565.2369,50.0087,465.658,-0.406857330322398,0.350732676542563,-1.8703473836068,4.0812 +no_defs',
 	{
-		transformation: new L.Transformation(1,0,-1,0),
-		resolutions: res
+		resolutions: res,
+		bounds: L.bounds([-285401.92, 22598.08], [595401.9199999999, 903401.9199999999]),
+		origin: [-285401.92, 22598.08]
 	});
 
 	var achtergrondkaart = L.tileLayer('http://geodata.nationaalgeoregister.nl/tms/1.0.0/brtachtergrondkaart/{z}/{x}/{y}.png', {
 		tms: true,
 		minZoom: 2,
 		maxZoom: 13,
+		//continuousWorld: true,
 		attribution: '<a href="https://github.com/tomtor/PDOK-demo-app">DemoMap</a> Map data &copy; <a href="http://pdok.nl">PDOK</a>',
 		id: 'brtachtergrondkaart'
-	});
+});
 	var luchtfoto = L.tileLayer('http://geodata1.nationaalgeoregister.nl/luchtfoto/tms/1.0.0/luchtfoto_png/EPSG28992/{z}/{x}/{y}.png', {
 		tms: true,
 		minZoom: 2,
 		maxZoom: 13,
+		//continuousWorld: true,
 		attribution: '<a href="https://github.com/tomtor/PDOK-demo-app">DemoMap</a> Map data &copy; <a href="http://pdok.nl">PDOK</a>',
 		id: 'luchtfoto'
 	});
-	
+
 	var map = L.map('map', {doubleClickZoom:false, crs:RDM,
-		layers:[luchtfoto, achtergrondkaart]}).setView([52.15, 5.2], 3);
+		//continuousWorld: true,
+		//worldCopyJump: false,
+		layers:[luchtfoto, achtergrondkaart]});
 	var baseMaps = {
 		"Luchtfoto": luchtfoto,
 		"Kaart": achtergrondkaart
 	};
 	L.control.layers(baseMaps, null, {position: 'topleft'}).addTo(map);
+
+	map.setView([52,5],3);
 
 	var searchControl = L.Control.extend({
 		options: {
