Add (image) link

--- a/school-crowd.html
+++ b/school-crowd.html
@@ -396,6 +396,8 @@ https://github.com/tomtor/school-crowd
 			try {
 				pu = "<table style=\"border-collapse: separate; border-spacing: 5px;\">" +
 					"<tr><td>Gebruiker:</td><td>" + xss(plotlist[i].properties.user) + "</td></tr>" +
+					(plotlist[i].properties.objlink ?
+						("<tr><td>Link:</td><td><b><a href=\"" + decode(plotlist[i].properties.objlink) + "\" target=\"_blank\">toon</a></b></td></tr>") : "") +
 					"<tr><td>Soort:</td><td><b>" + xss(plotlist[i].properties.kind) + "</td></tr></table>";
 				if (plotlist[i].properties.crypt) {
 					pu= pu + "<button id=\"delCryptButton\" class=\"btn btn-danger btn-sm btn-block\" onclick=\"delSecret('"
@@ -467,6 +469,7 @@ https://github.com/tomtor/school-crowd
 				},
 				"properties" : {
 					"kind" : $("#selInput").val(),
+					"objlink": $("#linkInput").val().length ? $("#linkInput").val() : null,
 					"user" : $("#idInput").val()
 				}
 			};
@@ -479,6 +482,8 @@ https://github.com/tomtor/school-crowd
 			var msg= server + '/add/' + encodeURIComponent(JSON.stringify(gjf));
 			$.ajax({url: msg, success: function(result){
 				var pu = "<table style=\"border-collapse: separate; border-spacing: 5px;\">" +
+				(gjf.properties.objlink ?
+					("<tr><td>Link:</td><td><b><a href=\"" + decode(gjf.properties.objlink) + "\" target=\"_blank\">toon</a></b></td></tr>") : "") +
 				"<tr><td>Soort:</td><td><b>" +  xss(gjf.properties.kind) + "</b></td></tr></table>" +
 				"<button id=\"delButton\" onclick=\"delObject('"+result+"')\" type=\"button\" class=\"btn btn-warning btn-sm btn-block\">Verwijder</button>";
 				markers[result]= lastMark;
